Updated readme with build / startup instructions